--- a/app/src/main/res/layout/activity_catalogue.xml
+++ b/app/src/main/res/layout/activity_catalogue.xml
@@ -5,15 +5,4 @@
     android:id="@+id/idListeCatalogue"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.CatalogueClient.CatalogueActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".ui.CatalogueClient.CatalogueActivity"/>
