--- a/app/src/main/res/layout/activity_insription.xml
+++ b/app/src/main/res/layout/activity_insription.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
+<!--    <data>-->
+<!--        <variable-->
+<!--            name="viewModel"-->
+<!--            type="com.example.safesoftapplication.ViewModel.InscriptionVM" />-->
+<!--    </data>-->
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
