--- a/app/src/main/res/layout/fragment_mes_commandes.xml
+++ b/app/src/main/res/layout/fragment_mes_commandes.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.gallery.GalleryFragment">
+        tools:context=".ui.mesCommandes.MesCommandesFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -13,10 +12,10 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/button7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="details produit" />
+                android:text="details achat" />
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
 </layout>
