--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.safesoftapplication.vM.AuthentifivationVM" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,18 +19,18 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="bottom|center"
-            android:orientation="vertical">
-            <!--                    android:text="@={viewModel.loginClient}"-->
+            android:orientation="vertical" >
+
             <EditText
                 android:id="@+id/idLogin"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:autofillHints=""
                 android:ems="10"
-
                 android:hint="@string/strLogin"
-                android:inputType="textPersonName" />
-            <!--                android:text="@={viewModel.pswClient}"-->
+                android:inputType="textPersonName"
+                android:text="@={viewModel.loginClient}"/>
+
             <EditText
                 android:id="@+id/idPSW"
                 android:layout_width="300dp"
@@ -32,7 +38,8 @@
                 android:ems="10"
 
                 android:hint="@string/strPassword"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:text="@={viewModel.pswClient}"/>
 
         </LinearLayout>
 
@@ -47,13 +54,15 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="@string/strBtnLogin" />
+                android:text="@string/strBtnLogin"
+                android:onClick="@{() -> viewModel.clicLogin()}"/>
 
             <Button
                 android:id="@+id/btnInscription"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="@string/strBtnInscription" />
+                android:text="@string/strBtnInscription"
+                android:onClick="@{() -> viewModel.clicInscription()}"/>
         </LinearLayout>
 
     </LinearLayout>
