--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.safesoftapplication.vM.AuthentifivationVM" />
+            type="com.example.safesoftapplication.vM.authVM.AuthentifivationVM" />
     </data>
 
     <LinearLayout
@@ -57,12 +57,15 @@
                 android:text="@string/strBtnLogin"
                 android:onClick="@{() -> viewModel.clicLogin()}"/>
 
+
+
             <Button
                 android:id="@+id/btnInscription"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="@string/strBtnInscription"
                 android:onClick="@{() -> viewModel.clicInscription()}"/>
+
         </LinearLayout>
 
     </LinearLayout>
