--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -1,55 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.safesoftapplication.vM.contactVM.ContactVM" />
+    </data>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".ui.contacts.ContactsFragment" >
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="1"
+                android:gravity="bottom"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/idNomOrganisme"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_marginTop="20dp"
+                    android:text="@={viewModel.nomOrganisme}"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/idAddresseOrganisme"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_marginTop="20dp"
+                    android:text="@={viewModel.adresseOrganisme}"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/idCodePostalOrganisme"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_marginTop="20dp"
+                    android:text="@={viewModel.codePostalOrganisme}"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/idEmailOrganisme"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_marginTop="20dp"
+                    android:text="@={viewModel.emailOrganisme}"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/idTelephoneOrganisme"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="@={viewModel.telephoneOrganisme}"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="bottom|right"
+                android:orientation="vertical">
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fabTelephone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center"
+                    android:layout_margin="@dimen/fab_margin"
+                    app:srcCompat="@android:drawable/stat_sys_phone_call_on_hold" />
 
             </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
-
+        </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
