--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -23,23 +23,25 @@
 
             <EditText
                 android:id="@+id/idLogin"
-                android:layout_width="300dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:autofillHints=""
                 android:ems="10"
+                android:gravity="center"
                 android:hint="@string/strLogin"
                 android:inputType="textPersonName"
-                android:text="@={viewModel.loginClient}"/>
+                android:text="@={viewModel.loginClient}" />
 
             <EditText
                 android:id="@+id/idPSW"
-                android:layout_width="300dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
 
+                android:gravity="center"
                 android:hint="@string/strPassword"
                 android:inputType="textPassword"
-                android:text="@={viewModel.pswClient}"/>
+                android:text="@={viewModel.pswClient}" />
 
         </LinearLayout>
 
